Fixed sidebar wrapping issue

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -189,6 +189,7 @@ span {
     position: absolute;
     right: 40px;
     top: 145px;
+    width: 165px;
 }
 
 #right p {
